# finsight-ai

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
config/: logger.py  settings.py
docs/: CONTRIBUTING.md
etl/: __init__.py
infrastructure/terraform/: main.tf  variables.tf
tests/unit/: test_settings.py
